@@ -1,5 +1,5 @@
 /*
- * $Id: hbextern.ch,v 1.12 2004/08/24 08:32:38 ronpinkas Exp $
+ * $Id: hbextern.ch,v 1.13 2005/04/23 06:55:47 guerra000 Exp $
  */
 
 /*
@@ -676,6 +676,11 @@ EXTERNAL HB_GT_VERSION
 EXTERNAL SECONDSCPU
 
 EXTERNAL HB_REGEXCOMP, HB_REGEX, HB_REGEXMATCH, HB_REGEXSPLIT, HB_REGEXATX
+
+EXTERNAL HASH, HSETPARTITION, HGETPARTITION, HSETAUTOADD, HGETAUTOADD, ;
+         HSETCASEMATCH, HGETCASEMATCH, HGETKEYAT, HGETVALUEAT, HGETPAIRAT, ;
+         HSETVALUEAT, HDEL, HSCAN, HGETPOS, HGETKEYS, HGETVALUES, HSET, ;
+         HDELAT, HEVAL, HCLONE, HCOPY, HMERGE
 
 #endif /* HB_EXTENSION */
 
