@@ -1392,7 +1392,7 @@
             s2[0] = sLine[0];
             s2[1] = sLine[1];
 
-            if( strstr( "++\\--\\->\\:=\\==\\!=\\<>\\>=\\<=\\+=\\-=\\*=\\^=\\**\\/=\\%=\=>\^^\<<\>>", (char*) s2 ) )
+            if( strstr( "++\\--\\->\\:=\\==\\!=\\<>\\>=\\<=\\+=\\-=\\*=\\^=\\**\\/=\\%=\\=>\\^^\\<<\\>>", (char*) s2 ) )
             {
                sReturn[0] = s2[0];
                sReturn[1] = s2[1];
